--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Taost notification</title>
 </head>
 <body>
+    <div class="buttons">
+        <button onclick="showToast()">Sucess</button>
+        <button onclick="showToast()">Error</button>
+        <button onclick="showToast()">Invalid</button>
+    </div>
+    <div id="toastBox">
+
+    </div>
 
     <script src="main.js"></script>
     
