--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c45c92b412.js" crossorigin="anonymous"></script>
     <title>Taost notification</title>
 </head>
 <body>
     <div class="buttons">
-        <button onclick="showToast()">Sucess</button>
-        <button onclick="showToast()">Error</button>
-        <button onclick="showToast()">Invalid</button>
+        <button onclick="showToast(SuccessMsg)">Sucess</button>
+        <button onclick="showToast(ErrorMsg)">Error</button>
+        <button onclick="showToast(InvalidMsg)">Invalid</button>
     </div>
     <div id="toastBox">
 
