--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c45c92b412.js" crossorigin="anonymous"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/c45c92b412.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Taost notification</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="buttons">
-        <button onclick="showToast(SuccessMsg)">Sucess</button>
-        <button onclick="showToast(ErrorMsg)">Error</button>
-        <button onclick="showToast(InvalidMsg)">Invalid</button>
+      <button onclick="showToast(SuccessMsg)">Sucess</button>
+      <button onclick="showToast(ErrorMsg)">Error</button>
+      <button onclick="showToast(InvalidMsg)">Invalid</button>
     </div>
-    <div id="toastBox">
-
-    </div>
+    <div id="toastBox"></div>
 
     <script src="main.js"></script>
-    
-</body>
+  </body>
 </html>
